# monte-carlo-omp

./: CMakeLists.txt  README.md  hit.cpp  main.cpp
include/: CMakeLists.txt
